--- a/WhiteElephantWebsite/App_Themes/SiteTheme/SiteTheme.css
+++ b/WhiteElephantWebsite/App_Themes/SiteTheme/SiteTheme.css
@@ -111,7 +111,6 @@ textarea {
 
 a:link {
     color: black;
-    text-decoration: none;
 }
 
 
@@ -122,7 +121,7 @@ a:visited {
 }
 a:hover {
     color: coral;
-    text-decoration: line-through;
+    text-decoration: solid;
 }
 
 a img {
