Licensing comments added

--- a/WhiteElephantWebsite/App_Themes/SiteTheme/SiteTheme.css
+++ b/WhiteElephantWebsite/App_Themes/SiteTheme/SiteTheme.css
@@ -1,4 +1,6 @@
-﻿body {
+﻿
+
+body {
     font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
     font-size: medium;
     line-height: 110%;
