--- a/WhiteElephantWebsite/My.Master
+++ b/WhiteElephantWebsite/My.Master
@@ -4,9 +4,9 @@
 <%@ Register Src="~/ucCategoriesNavigation.ascx" TagPrefix="uc1" TagName="ucCategoriesNavigation" %>
 <%@ Register Src="~/ucProductSearch.ascx" TagPrefix="uc1" TagName="ucProductSearch" %>
 
-<!--
-     
-     @project White Elephant E-Commerce Website
+<%--
+    
+    @project White Elephant E-Commerce Website
      @authors Courtney Diotte
      @authors Melanie Roy-Plommer
      @version 1.0
@@ -31,9 +31,7 @@
     
      @section Academic Integrity
      I certify that this work is solely my own and complies with
-     NBCC Academic Integrity Policy (policy 1111)
-     -->
-
+     NBCC Academic Integrity Policy (policy 1111)--%>
 <!DOCTYPE html>
 
 <html>
